# misfitspack

./: .gitignore  CMakeLists.txt  CustomAniTiles.ini  ManiaTitleCardColours.ini  READ ME I AM VERY IMPORTANT.txt  README.md  Unlocks.lst  mod.ini
Data/Game/: Pal.act
Data/Palettes/: EncoreCPZ.act  EncoreCPZ.act (1).bak  EncoreCPZ.act (2).bak  EncoreCPZ.act (3).bak  EncoreCPZ.act (4).bak  EncoreCPZw.act  EncoreCPZw.act (1).bak  EncoreCPZw.act (2).bak  EncoreCPZw.act (3).bak  EncoreCPZw.act (4).bak  EncoreFBZ.act  EncoreFBZ.act (1).bak  EncoreFBZ.act (2).bak  EncoreFBZ.act (3).bak  EncoreFBZ.act (4).bak  EncoreGHZ - Copy.act  EncoreGHZ.act  EncoreGHZ.act (1).bak  EncoreGHZ.act (2).bak  EncoreGHZ.act (4).bak  EncoreGHZ2.act  EncoreHCZ.act  EncoreHCZ.act (1).bak  EncoreHCZ.act (2).bak  EncoreHCZ.act (3).bak  EncoreHCZ.act (4).bak  EncoreHCZw.act  EncoreHCZw.act (1).bak  EncoreHCZw.act (2).bak  EncoreHCZw.act (3).bak  EncoreHCZw.act (4).bak  EncoreLRZ1.act  EncoreLRZ1.act (1).bak  EncoreLRZ1.act (2).bak  EncoreLRZ1.act (3).bak  EncoreLRZ1.act (4).bak  EncoreMMZ.act (3).bak  EncoreOOZ1.act  EncoreOOZ1.act (1).bak  EncoreOOZ1.act (2).bak  (+14 more)
Data/Sprites/AIZ/: MonkeyDude.bin.bak
Data/Sprites/FBZ/: bruh.pal  nice.pal  yae.act
Data/Sprites/GHZ/: Decoration.bin.bak
Data/Sprites/LRZ2/: hshgf
Data/Sprites/LSelect/: mz.act  pal.act
Data/Sprites/Players/: 1
Data/Stages/CPZ/: HVGFN.act  p.act  (+3 more)
Data/Strings/: Credits.txt  StringsEN.txt
src/: Misfits.sln
src/Misfits/: Misfits (v5).vcxproj  Misfits (v5u).vcxproj  Misfits.c  Misfits.h  Misfits.vcxproj  Misfits.vcxproj.filters
(+75 files in other folders)
